[project]
name = "membase"
version = "0.1.6"
description = "python sdk for membase operation: memory, knowledge, chain, auth etc."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chroma-haystack>=3.0.0",
    "chromadb>=0.6.3",
    "haystack-ai>=2.11.2",
    "loguru>=0.7.3",
    "requests>=2.32.3",
    "web3>=7.8.0",
]
